--- a/AutoProxy/AutoProxy.csproj
+++ b/AutoProxy/AutoProxy.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Helpers\NetworkAdaptersHelper.cs" />
+    <Compile Include="Helpers\ProxyMonitor.cs" />
     <Compile Include="Helpers\SystemProxyHelper.cs" />
     <Compile Include="ViewModels\AutoProxyViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
